@@ -87,7 +87,7 @@ public class Base {
 	/**
 	 * The version number of this edition of replicatorG.
 	 */
-	public static final int VERSION = 7;
+	public static final int VERSION = 8;
 	/**
 	 * The textual representation of this version (4 digits, zero padded).
 	 */
