@@ -1,11 +1,7 @@
-For 0008:
-* built-in firmware uploader.  STK500v1 in java, or use avrdude?
-** probably use avrdude.  flash appropriate line.
-* build to local file
-* build to specific filename
-* build from specific filename
-* list files on card (if v1.4)
-* ignore interactive commands on non-interactive builds
-
 For 0009:
-* clean up launchers and dist for all platforms! (see latest arduino/processing revisions for tips)
+* ignore interactive commands on non-interactive builds
+* STL file previewer
+* integrated slicer framework
+* clean up machine state and controller
+* state icons
+* disconnect button
